Quick fix for scroll bar issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,10 @@ header .logo {
     font-size: 62px;
     align-items: center;
     margin: 10px 3% 0 4%;
+    -webkit-transform: skew(4deg, 2deg);
+    -moz-transform: skew(4deg, 2deg);
+    -ms-transform: skew(4deg, 2deg);
+    -o-transform: skew(4deg, 2deg);
   }
 }
 @media (max-width: 400px) {
@@ -274,6 +278,10 @@ header .logo {
     flex-flow: column;
     align-items: center;
     margin: 40px auto;
+    -webkit-transform: skew(1deg, 1deg);
+    -moz-transform: skew(1deg, 1deg);
+    -ms-transform: skew(1deg, 1deg);
+    -o-transform: skew(1deg, 1deg);
   }
 }
 .cta .cta-text button {
